@@ -641,7 +641,7 @@
                         <property name="can_focus">True</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                         <property name="pixbuf_column">0</property>
-                        <property name="text_column">1</property>
+                        <property name="markup_column">1</property>
                         <property name="row_spacing">18</property>
                         <property name="column_spacing">18</property>
                         <property name="spacing">3</property>
