@@ -1,3 +1,10 @@
+2007-06-27  Denis Washington  <denisw@svn.gnome.org>
+
+	* appearance.h:
+	* appearance-themes.c: (theme_list_sort_func, themes_init):
+	Make the Custom theme always the first in the list and make it's label bold
+	to diffentiate it from the other themes.
+
 2007-06-26  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-themes.c: (theme_is_equal): ... and actually accept an empty
